Adicionado Link Google

--- a/Fundamentos/Secao 02 - Introducao a HTML e CSS/01 - HTML e CSS - Estruturas de Pagina/index2.html
+++ b/Fundamentos/Secao 02 - Introducao a HTML e CSS/01 - HTML e CSS - Estruturas de Pagina/index2.html
@@ -15,14 +15,15 @@
       </ul>
       <br>
         <p id="Adilson">Esse é sobre o Adilson!<br>
-    Não tenho muito pra falar sobre ele</p>
+    Não tenho muito pra falar sobre ele!</p>
         <p id="Vinicius"> Esse é sobre o Vinicius!<br>
-    Não tenho muito pra falar sobre ele</p>
+    Não tenho muito pra falar sobre ele!</p>
         <p id="Erickson"> Esse é sobre o Erickson!<br>
-    Não tenho muito pra falar sobre ele</p>
+    Não tenho muito pra falar sobre ele!</p>
         <p id="Wilson"> Esse é sobre o Wilson!<br>
-    Não tenho muito pra falar sobre ele</p>
+    Não tenho muito pra falar sobre ele!</p>
         <p id="Juliana"> Esse é sobre o Juliana!<br>
-    Não tenho muito pra falar sobre ele</p>
+    Não tenho muito pra falar sobre ele!</p>
+    <p><a href="https://www.google.com.br" target="_blank">Clique Aqui para ir ao Google!</a></p>
   </body>
 </html>
