--- a/Fundamentos/Secao 02 - Introducao a HTML e CSS/02 - HTML e CSS - Primeiros Passos em CSS/index exercicio 2.html
+++ b/Fundamentos/Secao 02 - Introducao a HTML e CSS/02 - HTML e CSS - Primeiros Passos em CSS/index exercicio 2.html
@@ -6,6 +6,7 @@
     <style>
         h1 {
             font-family: sans-serif;
+            
         }
         p {
             font-weight: 600;
@@ -13,6 +14,10 @@
         }
         body {
             font-size: 16px;
+            font-style: italic;
+            line-height: 50px;
+            text-align: center;
+            text-decoration: underline;
         }
     </style>
   </head>
