--- a/Fundamentos/Secao 02 - Introducao a HTML e CSS/02 - HTML e CSS - Primeiros Passos em CSS/index exercicio 2.html
+++ b/Fundamentos/Secao 02 - Introducao a HTML e CSS/02 - HTML e CSS - Primeiros Passos em CSS/index exercicio 2.html
@@ -19,15 +19,24 @@
             text-align: center;
             text-decoration: underline;
         }
+        #Amarelo{
+                background-color: yellow;
+        }
+        #Vermelho{
+                background-color: red;
+        }
+        #Marrom{
+                background-color: brown;
+        }
     </style>
   </head>
   <body>
     <h1>Cores</h1>
     <p>Qual é a sua cor favorita?</p>
     <ul>
-      <li>Amarelo</li>
-      <li>Vermelho</li>
-      <li>Marrom</li>
+      <li id="Amarelo">Amarelo</li>
+      <li id="Vermelho">Vermelho</li>
+      <li id="Marrom">Marrom</li>
     </ul>
   </body>
 </html>
