itens da lista com fonte diferente ao clicar sobre

--- a/Fundamentos/Secao 02 - Introducao a HTML e CSS/03 - HTML e CSS - Seletores e Posicionamento/index exercicio 3.html
+++ b/Fundamentos/Secao 02 - Introducao a HTML e CSS/03 - HTML e CSS - Seletores e Posicionamento/index exercicio 3.html
@@ -9,9 +9,9 @@
     <h1>Lista dos Melhores Sites que já vi</h1>
     <p>Top 3 dos melhores sites que existem na web</p>
     <ol>
-        <li><a href="https://filipedeschamps.com.br/">Site do Filipe Deschamps</a></li>
-        <li><a href="https://www.youtube.com/gabrielpato">Youtube do Gabriel Pato</a></li>
-        <li><a href="https://avioesemusicas.com/">Blog do Aviões e Músicas</a></li>
+        <li><a href="https://filipedeschamps.com.br/" target="_blank">Site do Filipe Deschamps</a></li>
+        <li><a href="https://www.youtube.com/gabrielpato" target="_blank">Youtube do Gabriel Pato</a></li>
+        <li><a href="https://avioesemusicas.com/" target="_blank">Blog do Aviões e Músicas</a></li>
     </ol>
     <p>Principais motivos para eu gostar deles</p>
   </body>
