Adicionado o porque gosto deles e lit style none para todas as listas

--- a/Fundamentos/Secao 02 - Introducao a HTML e CSS/03 - HTML e CSS - Seletores e Posicionamento/index exercicio 3.html
+++ b/Fundamentos/Secao 02 - Introducao a HTML e CSS/03 - HTML e CSS - Seletores e Posicionamento/index exercicio 3.html
@@ -14,5 +14,10 @@
         <li><a href="https://avioesemusicas.com/" target="_blank">Blog do Aviões e Músicas</a></li>
     </ol>
     <p>Principais motivos para eu gostar deles</p>
+    <ul>
+      <li>O do Filipe porque é o que eu acompanho sobre programação</li>
+      <li>O do Gabriel Pato porque foi onde eu conheci o mundo da programação</li>
+      <li>O do Aviões e Musicas porque eu gosto muito de aviões e um dia quero ser piloto de avião</li>
+    </ul>
   </body>
 </html>
