--- a/Fundamentos/Secao 02 - Introducao a HTML e CSS/03 - HTML e CSS - Seletores e Posicionamento/index exercício 3.html
+++ b/Fundamentos/Secao 02 - Introducao a HTML e CSS/03 - HTML e CSS - Seletores e Posicionamento/index exercício 3.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <title>Agrupando Seletores</title>
-    <link rel="stylesheet" href="style exercicio 3.css">
+    <link rel="stylesheet" href="style exercício 3.css">
   </head>
   <body>
     <h1>Lista dos Melhores Sites que já vi</h1>
